Fixed play page jumping down when unnecessary

--- a/client/src/components/UI/ComicList/_ComicList.scss
+++ b/client/src/components/UI/ComicList/_ComicList.scss
@@ -40,7 +40,7 @@
 
 		.comic-list-bottom {
 			position: relative;
-			min-height: 40vh;
+			min-height: 100px; //this was 40vh, seemed excessive?
 		}
 	}
 }
