--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -34,7 +34,7 @@ body {
 			.app-inner {
 				display: flex;
 				flex-direction: column;
-				min-height: 100vh;
+				min-height: 100%;
 	
 				[class^="page-"] {
 					flex: 1;
